2010-04-28 Braden McDaniel  <braden@endoframe.com>

	* src/Makefile.am (node_x3d_cad_geometry_la_SOURCES): Added
	missing register_node_metatypes.cpp.

2010-04-28 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::set_world(resource_istream &)): Corrected
	variable name.

2010-04-28 Braden McDaniel  <braden@endoframe.com>

	Protect openvrml::browser::node_metatype_registry_ with a mutex.

	* src/libopenvrml/openvrml/browser.h
	(openvrml::browser): Added node_metatype_registry_mutex_.
	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::~browser()): Lock the
	node_metatype_registry_mutex_.
	(openvrml::browser::add_node_metatype(const node_metatype_id &,
	const boost::shared_ptr<openvrml::node_metatype> &)): Lock the
	node_metatype_registry_mutex_.
	(openvrml::browser::node_metatype(const node_metatype_id &)
	const): Lock the node_metatype_registry_mutex_.
	(openvrml::browser::set_world(resource_istream &)): Lock the
	node_metatype_registry_mutex_.
	(openvrml::browser::replace_world(const
	std::vector<boost::intrusive_ptr<node> > &)): Lock the
	node_metatype_registry_mutex_.
	(openvrml::browser::render()): Lock the
	node_metatype_registry_mutex_.

2010-04-28 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/image_stream_listener.cpp
	(openvrml_png_info_callback(png_structp, png_infop)): Added
	missing "using" declaration.

2010-04-13 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/image_stream_listener.cpp
	(openvrml_png_info_callback(png_structp, png_infop)): Acquire a
	unique_lock on the image_mutex_.

2010-03-21 Braden McDaniel  <braden@endoframe.com>

	* README: Note libltdl requirement.

2010-03-21 Braden McDaniel  <braden@endoframe.com>

	* README: Note that OpenVRML must be installed to the same prefix
	as D-Bus in order for automatic activation of openvrml-xembed to
	work.

2010-03-21 Braden McDaniel  <braden@endoframe.com>
